--- a/index.css
+++ b/index.css
@@ -1,55 +1,65 @@
 body{
-            background-color: rgb(237, 87, 27);
-        }
-        #winner{
-            text-align: center;
-            font-size: 50px;
-            margin: 50px;
-            padding-bottom: 40px;
-            padding-top: 40px;
-        }
-        #container{
-            display: inline;
-            text-align: center;
-            font-size: 55px;
-            padding: 30px;  
-            display: flex; 
-            justify-content: space-evenly;
-            
-        }
-        #member-1{
-            width: 120px;
-            height: 100px;
-            border: 1px solid black;
-            border-radius: 5px;
-            padding-top: 25px;
-        }
-        #member-2{
-            width: 120px;
-            height: 100px;
-            border: 1px solid black;
-            border-radius: 5px;
-            padding-top: 25px;
-        }
-        #member-3{
-            width: 120px;
-            height: 100px;
-            border: 1px solid black;
-            border-radius: 5px;
-            padding-top: 25px;
-        }
-        button{
-            width: 180px;
-            height: 50px;
-            border-radius: 10px;
-            border: 0px;
-            display: block;
-            margin: auto;
-            background: linear-gradient(to right, #3b63ff,#fe192c);
-            font-size: 20px;
-            margin-top: 130px;
-        }
-        button:hover{
-            cursor: pointer;
-            background: linear-gradient(to left, #3b63ff,#fe192c);
-        }
+    background-color: rgb(40, 39, 39);
+}
+#winner{
+    color: rgb(255, 106, 0);
+    text-align: center;
+    font-size: 50px;
+    margin: 50px;
+    padding-bottom: 40px;
+    padding-top: 40px;
+}
+#container{
+    display: inline;
+    text-align: center;
+    font-size: 55px;
+    padding: 30px;  
+    display: flex; 
+    justify-content: space-evenly;
+    
+}
+#member-1{
+    font-weight: bolder;
+    font-family: 'Courier New', Courier, monospace;
+    width: 120px;
+    height: 100px;
+    border: 1px solid white;
+    border-radius: 5px;
+    padding-top: 25px;
+    background-color: black;
+}
+#member-2{
+    font-weight: bolder;
+    font-family: 'Courier New', Courier, monospace;
+    width: 120px;
+    height: 100px;
+    border: 1px solid white;
+    border-radius: 5px;
+    padding-top: 25px;
+    background-color: black;
+}
+#member-3{
+    font-weight: bolder;
+    font-family: 'Courier New', Courier, monospace;
+    width: 120px;
+    height: 100px;
+    border: 1px solid white;
+    border-radius: 5px;
+    padding-top: 25px;
+    background-color: black;
+}
+button{
+    width: 180px;
+    height: 50px;
+    border-radius: 10px;
+    border: 0px;
+    display: block;
+    margin: auto;
+    background: linear-gradient(to right, #3b63ff,#fe192c);
+    font-size: 20px;
+    margin-top: 130px;
+}
+button:hover{
+    cursor: pointer;
+    background: linear-gradient(to left, #3b63ff,#fe192c);
+}
